fix white space condensing in instructions

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -16,13 +16,16 @@
     }
 
     .loading-container {
-        margin: 5rem;
+        margin-top: 2rem;
+        padding: 1.5rem
+        border-top: 1px solid #d1d5db;
     }
 
     .loading-container h4 {
-        border-top: 1px solid #d1d5db;
-        padding: 2rem 0;
-        margin: 2rem 0;
+        padding: 0rem 0;
+        margin: .5rem 0;
+        font-style: italic;
+        font-weight: normal;
     }
 
     .focus-reset {
