--- a/client/src/pages/RecipeDetails.css
+++ b/client/src/pages/RecipeDetails.css
@@ -82,6 +82,7 @@
     }
 
     .ingredients, .instructions {
+        white-space: pre-wrap;
         margin-bottom: 1.5rem;
     }
 
